--- a/ZIPChallenge.ConsoleApp/ZIPChallenge.ConsoleApp.csproj
+++ b/ZIPChallenge.ConsoleApp/ZIPChallenge.ConsoleApp.csproj
@@ -7,4 +7,14 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ZIPChallenge.Common\ZIPChallenge.Common.csproj" />
+    <ProjectReference Include="..\ZIPChallenge.Models\ZIPChallenge.Models.csproj" />
+    <ProjectReference Include="..\ZIPChallenge.Services\ZIPChallenge.Services.csproj" />
+  </ItemGroup>
+
 </Project>
